# OTTOBackEnd

./: .env.example  .gitignore  README.md  bot_session.session  combined.json  default_session.session  default_session.session-journal  dockerfile  makefile  manage.py  pyproject.toml  session_name.session  test.py  user_session.session
core/api/: schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/customers/: handlers.py  schemas.py
core/api/v1/pred_results/: handlers.py  schemas.py  use_case.py
core/api/v1/products/: handlers.py  schemas.py
core/apps/common/: combined.json  exception.py  gemini.py  models.py
core/apps/common/telethon/: service.py  test.py
core/apps/customers/: admin.py  apps.py
core/apps/customers/entities/: customers.py
core/apps/customers/exception/: codes.py  customers.py
core/apps/customers/migrations/: 0001_initial.py  0002_customer_phone_number.py  0003_customer_is_confirmed.py
core/apps/customers/models/: __init__.py  customers.py
core/apps/customers/services/: auth.py  codes.py  customers.py  sender.py  token.py
core/apps/pred_results/: admin.py  apps.py  entity.py  models.py  service.py
core/apps/pred_results/migrations/: 0001_initial.py
core/apps/products/: services.py
core/core/: asgi.py  containers.py  wsgi.py
core/core/settings/: local.example.py  main.py
